calcula média por conceitos

--- a/users/templates/users/edita_nota.html
+++ b/users/templates/users/edita_nota.html
@@ -448,6 +448,7 @@
     {
         $(".nota").on("change keyup",calculateAvarage)
         $(".peso").on("change keyup",calculateAvarage)
+        $(".conc").on("change keyup",calculateAvarage)
     })
 
     $(document).ready(calculateAvarage);
