--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -127,7 +127,7 @@
             <td> <!-- Média -->
               {% with media=aluno.get_medias|dict_key:ano_semestre %}
                 {% if media.pesos != 1 %}
-                  <a style="color:red" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100%">
+                  <a style="color:red" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100% ({% widthratio media.pesos 1 100 %}%)">
                 {% endif %}    
                   {{media.media|floatformat:1}}
                 {% if media.pesos != 1 %}
