--- a/projetos/templates/projetos/graficos.html
+++ b/projetos/templates/projetos/graficos.html
@@ -47,15 +47,20 @@
 
     <div class="2areas2">
 
-        {% comment %} Definindo do tamanho dos objetos {% endcomment %}
-        <div id="canvas-holder"> 
+        <div class="row">
+            <div class="col-md-10"><canvas id="doughnut-situacao"></canvas></div>
+            <div class="col-md-6"><canvas id="doughnut-rii"></canvas></div>
+            <div class="col-md-6"><canvas id="doughnut-rig"></canvas></div>
+            <div class="col-md-6"><canvas id="doughnut-rfi"></canvas></div>
+            <div class="col-md-6"><canvas id="doughnut-rfg"></canvas></div>
+        </div>
 
-            <canvas id="doughnut-situacao"></canvas>
-            <br><br>
+        <div style="width:300px;"> 
             <canvas id="horizontal-objetivos"></canvas>
             <br><br>
             <canvas id="chart-medias"></canvas>
         </div>
+
 
         <script>
     
@@ -63,12 +68,12 @@
     var config_situacao = {
         type: 'doughnut',
         data: {
-        labels: ["Ideal(nota>=7)", "Regular(7>nota>=6)", "Inferior(6>nota)"],
+        labels: ["Ideal(>=7)", "Regular(>=5)", "Inferior(<5)"],
         datasets: [
             {
             label: "Estudantes",
             backgroundColor: ["#1e951e", "#8e8e11","#F10c0c"],
-            data: [{{notas.ideal}},{{notas.regular}},{{notas.inferior}}]
+            data: [{{medias.ideal}},{{medias.regular}},{{medias.inferior}}]
             }
         ]
         },
@@ -79,6 +84,175 @@
             title: {
                 display: true,
                 text: 'Situação em função da nota dos estudantes',
+                position: 'top'
+            },
+            legend: {
+                display: true,
+                position: "bottom",
+            },
+            plugins: {
+                datalabels: {
+                    formatter: (value, ctx) => {
+                        let sum = 0;
+                        let dataArr = ctx.chart.data.datasets[0].data;
+                        dataArr.map(data => {
+                            sum += data;
+                        });
+                        let percentage = (value*100 / sum).toFixed(1)+"%";
+                        return percentage;
+                    },
+                    color: '#000',
+                }
+            }
+        }
+    }
+
+
+    var config_rii = {
+        type: 'doughnut',
+        data: {
+        labels: ["Ideal(>=7)", "Regular(>=5)", "Inferior(<5)"],
+        datasets: [
+            {
+            label: "Estudantes",
+            backgroundColor: ["#1e951e", "#8e8e11","#F10c0c"],
+            data: [{{notas.rii.ideal}},{{notas.rii.regular}},{{notas.rii.inferior}}]
+            }
+        ]
+        },
+        options: {
+            tooltips: {
+                enabled: false
+            },
+            title: {
+                display: true,
+                text: 'Relatório Intermediário Individual',
+                position: 'top'
+            },
+            legend: {
+                display: true,
+                position: "bottom",
+            },
+            plugins: {
+                datalabels: {
+                    formatter: (value, ctx) => {
+                        let sum = 0;
+                        let dataArr = ctx.chart.data.datasets[0].data;
+                        dataArr.map(data => {
+                            sum += data;
+                        });
+                        let percentage = (value*100 / sum).toFixed(1)+"%";
+                        return percentage;
+                    },
+                    color: '#000',
+                }
+            }
+        }
+    }
+
+    var config_rig = {
+        type: 'doughnut',
+        data: {
+        labels: ["Ideal(>=7)", "Regular(>=5)", "Inferior(<5)"],
+        datasets: [
+            {
+            label: "Estudantes",
+            backgroundColor: ["#1e951e", "#8e8e11","#F10c0c"],
+            data: [{{notas.rig.ideal}},{{notas.rig.regular}},{{notas.rig.inferior}}]
+            }
+        ]
+        },
+        options: {
+            tooltips: {
+                enabled: false
+            },
+            title: {
+                display: true,
+                text: 'Relatório Intermediário de Grupo',
+                position: 'top'
+            },
+            legend: {
+                display: true,
+                position: "bottom",
+            },
+            plugins: {
+                datalabels: {
+                    formatter: (value, ctx) => {
+                        let sum = 0;
+                        let dataArr = ctx.chart.data.datasets[0].data;
+                        dataArr.map(data => {
+                            sum += data;
+                        });
+                        let percentage = (value*100 / sum).toFixed(1)+"%";
+                        return percentage;
+                    },
+                    color: '#000',
+                }
+            }
+        }
+    }
+
+    var config_rfi = {
+        type: 'doughnut',
+        data: {
+        labels: ["Ideal(>=7)", "Regular(>=5)", "Inferior(<5)"],
+        datasets: [
+            {
+            label: "Estudantes",
+            backgroundColor: ["#1e951e", "#8e8e11","#F10c0c"],
+            data: [{{notas.rfi.ideal}},{{notas.rfi.regular}},{{notas.rfi.inferior}}]
+            }
+        ]
+        },
+        options: {
+            tooltips: {
+                enabled: false
+            },
+            title: {
+                display: true,
+                text: 'Relatório Final Individual',
+                position: 'top'
+            },
+            legend: {
+                display: true,
+                position: "bottom",
+            },
+            plugins: {
+                datalabels: {
+                    formatter: (value, ctx) => {
+                        let sum = 0;
+                        let dataArr = ctx.chart.data.datasets[0].data;
+                        dataArr.map(data => {
+                            sum += data;
+                        });
+                        let percentage = (value*100 / sum).toFixed(1)+"%";
+                        return percentage;
+                    },
+                    color: '#000',
+                }
+            }
+        }
+    }
+
+    var config_rfg = {
+        type: 'doughnut',
+        data: {
+        labels: ["Ideal(>=7)", "Regular(>=5)", "Inferior(<5)"],
+        datasets: [
+            {
+            label: "Estudantes",
+            backgroundColor: ["#1e951e", "#8e8e11","#F10c0c"],
+            data: [{{notas.rfg.ideal}},{{notas.rfg.regular}},{{notas.rfg.inferior}}]
+            }
+        ]
+        },
+        options: {
+            tooltips: {
+                enabled: false
+            },
+            title: {
+                display: true,
+                text: 'Relatório Final de Grupo',
                 position: 'top'
             },
             legend: {
@@ -178,6 +352,26 @@
       // Chart da situação dos alunos por faixa de notas
       var doughnut_situacao = document.getElementById('doughnut-situacao').getContext('2d');
       window.situacao = new Chart(doughnut_situacao, config_situacao);
+
+
+      // Chart da situação dos alunos por faixa de notas
+      var doughnut_rii = document.getElementById('doughnut-rii').getContext('2d');
+      window.rii = new Chart(doughnut_rii, config_rii);
+
+      // Chart da situação dos alunos por faixa de notas
+      var doughnut_rig = document.getElementById('doughnut-rig').getContext('2d');
+      window.rig = new Chart(doughnut_rig, config_rig);
+
+      // Chart da situação dos alunos por faixa de notas
+      var doughnut_rfi = document.getElementById('doughnut-rfi').getContext('2d');
+      window.rfi = new Chart(doughnut_rfi, config_rfi);
+
+      // Chart da situação dos alunos por faixa de notas
+      var doughnut_rfg = document.getElementById('doughnut-rfg').getContext('2d');
+      window.rfg = new Chart(doughnut_rfg, config_rfg);
+
+
+
 
       // Chart do nível nos objetivos de aprendizagem
       var horizontal_objetivos = document.getElementById('horizontal-objetivos').getContext('2d');
