--- a/projetos/templates/projetos/graficos.html
+++ b/projetos/templates/projetos/graficos.html
@@ -89,7 +89,7 @@
             },
             title: {
                 display: true,
-                text: 'Situação em função da nota dos estudantes',
+                text: 'Médias Finais',
                 position: 'top'
             },
             legend: {
