--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -32,7 +32,7 @@
     <ul>
         <a href="{% url 'resultado_bancas' %}"><li>Resultado Bancas</li></a>
         <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
-        <a href="{% url 'graficos' %}"><li>Gráficos</li></a>
+        <a href="{% url 'graficos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
     </ul>
 
     <p>&nbsp;</p>
