--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -9,18 +9,32 @@
   <div class="row align-items-start mb-2">
     <div class="ml-3">
       <div class="input-group input-group-sm">
-        <div class="input-group-prepend">
-          <label class="input-group-text" for="filterEdicao">Edição</label>
-        </div>
-        <select class="filter custom-select w-auto" id="filterEdicao">
-          {% comment %} Se não quiser que aparece a opção todas crie uma variavel n_todas com True {% endcomment %}
-          {% if not n_todas %}
-            <option value="todas">todas</option>
-          {% endif %}
-          {% for edicao in edicoes %}
-              <option value="{{edicao}}" {% if forloop.last %}selected{% endif %}>{{edicao}}</option>
-          {% endfor %}
-        </select>
+        {% if not sem_edicao %}
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="filterEdicao">Edição</label>
+          </div>
+          <select class="filter custom-select w-auto" id="filterEdicao">
+            {% comment %} Se não quiser que aparece a opção todas crie uma variavel n_todas com True {% endcomment %}
+            {% if not n_todas %}
+              <option value="todas">todas</option>
+            {% endif %}
+            {% for edicao in edicoes %}
+                <option value="{{edicao}}" {% if forloop.last %}selected{% endif %}>{{edicao}}</option>
+            {% endfor %}
+          </select>
+        {% endif %}
+        {% if com_cursos %}
+          <span class="input-group-addon">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="filterCurso">Curso</label>
+          </div>
+          <select class="filter custom-select w-auto" id="filterCurso">
+              <option value="T">todos</option>
+              <option value="C" {% if curso == "computação" %}selected{% endif %}>computação</option>
+              <option value="M" {% if curso == "mecatrônica" %}selected{% endif %}>mecatrônica</option>
+              <option value="X" {% if curso == "mecânica" %}selected{% endif %}>mecânica</option>
+          </select>
+        {% endif %}
         <div id="spinner" class="ml-2 input-group-append" style="visibility: hidden">
           <div class="spinner-border text-secondary ml-auto" style="width: 1.8rem; height: 1.8rem;" role="status" aria-hidden="true">
             <span class="sr-only input-group-text">Carregando...</span>
